# mcp

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  CONTRIBUTING.md  DESIGN_GUIDELINES.md  DEVELOPER_GUIDE.md  README.md  VIBE_CODING_TIPS_TRICKS.md  apprunner.yaml  mkdocs.yml
samples/mcp-integration-with-kb/: README.md  pyproject.toml
samples/mcp-integration-with-kb/clients/: client_server.py
samples/mcp-integration-with-kb/user_interfaces/: chat_bedrock_st.py
samples/mcp-integration-with-nova-canvas/: .env.example  README.md  pyproject.toml
samples/mcp-integration-with-nova-canvas/clients/: client_server.py
samples/mcp-integration-with-nova-canvas/user_interfaces/: image_generator_st.py
src/amazon-kendra-index-mcp-server/: Dockerfile  NOTICE  README.md  pyproject.toml
src/amazon-kendra-index-mcp-server/tests/: test_init.py  test_main.py  test_server.py
src/amazon-mq-mcp-server/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  NOTICE  README.md  pyproject.toml
src/amazon-mq-mcp-server/tests/: __init__.py  test_aws_service_mcp_generator.py  test_server.py
src/amazon-sns-sqs-mcp-server/: .gitignore  CHANGELOG.md  Dockerfile  NOTICE  README.md  print_tools.py  pyproject.toml  run_tests.sh
src/amazon-sns-sqs-mcp-server/awslabs/: __init__.py
src/amazon-sns-sqs-mcp-server/tests/: README.md  __init__.py  test_common.py  test_generator.py  test_server.py  test_sns.py  test_sqs.py
src/aws-diagram-mcp-server/: Dockerfile  NOTICE  README.md  pyproject.toml  run_tests.sh
src/aws-diagram-mcp-server/awslabs/: __init__.py
src/aws-diagram-mcp-server/tests/: .gitignore  README.md  __init__.py  conftest.py  test_diagrams.py  test_models.py  test_scanner.py  test_server.py
src/aws-documentation-mcp-server/: CHANGELOG.md  Dockerfile  NOTICE  README.md  apprunner.yaml  docker-healthcheck.sh  pyproject.toml
src/aws-documentation-mcp-server/tests/: __init__.py  conftest.py  test_aws_cn_get_available_services_live.py  test_aws_cn_read_documentation_live.py  test_aws_read_documentation_live.py  test_aws_recommend_live.py  test_aws_search_live.py  test_models.py  test_read_documentation_live.py  test_recommend_live.py  test_search_live.py  test_server.py  test_server_aws.py  test_server_aws_cn.py  test_server_utils.py  test_util.py
src/aws-serverless-mcp-server/: README.md  pyproject.toml
src/aws-serverless-mcp-server/awslabs/: __init__.py
src/aws-serverless-mcp-server/tests/: README.md  __init__.py  conftest.py  test_cloudformation.py  test_configure_domain.py  test_deploy_serverless_app_help.py  test_deploy_service.py  test_deploy_webapp.py  test_deployment_details.py  test_deployment_help.py  test_deployment_list.py  test_deployment_manager.py  test_frontend_uploader.py  test_get_iac_guidance.py  test_get_lambda_event_schemas.py  test_get_lambda_guidance.py  test_get_metrics.py  test_get_serverless_templates.py  test_github.py  test_models.py  test_process.py  test_sam_build.py  test_sam_deploy.py  test_sam_init.py  test_sam_local_invoke.py  test_sam_logs.py  test_schemas.py  test_server.py  test_startup_script_generator.py  test_template_details.py  test_template_list.py  test_template_registry.py  test_template_renderer.py  test_update_webapp_frontend.py
src/aws-support-mcp-server/: README.md  pyproject.toml
src/aws-support-mcp-server/awslabs/: __init__.py
src/aws-support-mcp-server/tests/: conftests.py  test_aws_support_mcp_server.py  test_models.py
src/bedrock-kb-retrieval-mcp-server/: .gitignore  Dockerfile  NOTICE  README.md  pyproject.toml  run_tests.sh
src/bedrock-kb-retrieval-mcp-server/awslabs/: __init__.py
src/bedrock-kb-retrieval-mcp-server/tests/: README.md  __init__.py  conftest.py  test_clients.py  test_discovery.py  test_env_config.py  test_models.py  test_retrieval.py  test_runtime.py  test_server.py
src/cdk-mcp-server/: .gitignore  CHANGELOG.md  Dockerfile  NOTICE  README.md  pyproject.toml
src/cfn-mcp-server/: .gitignore  CHANGELOG.md  Dockerfile  NOTICE  README.md  pyproject.toml  run_tests.sh
src/cfn-mcp-server/tests/: __init__.py  test_aws_client.py  test_cloud_control_utils.py  test_errors.py  test_iac_generator.py  test_init.py  test_main.py  test_schema_manager.py  test_server.py
src/core-mcp-server/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  NOTICE  README.md  pyproject.toml
src/core-mcp-server/awslabs/: __init__.py
src/core-mcp-server/tests/: README.md  __init__.py  conftest.py  test_init.py  test_main.py  test_response_types.py  test_server.py  test_static.py
src/cost-analysis-mcp-server/: Dockerfile  NOTICE  README.md  pyproject.toml
src/cost-analysis-mcp-server/tests/: __init__.py  conftest.py  test_cdk_analyzer.py  test_helpers.py  test_report_generator.py  test_server.py  test_terraform_analyzer.py
src/documentdb-mcp-server/: .pre-commit-config.yaml  NOTICE  README.md  pyproject.toml
src/documentdb-mcp-server/tests/: conftest.py  test_analytic_tools.py  test_connection_tools.py  test_db_management_tools.py  test_init.py  test_main.py  test_query_tools.py  test_write_tools.py
src/dynamodb-mcp-server/: Dockerfile  NOTICE  README.md  pyproject.toml
src/dynamodb-mcp-server/tests/: test_dynamodb_server.py  test_readonly_delete_table.py
src/ecs-mcp-server/: DEVELOPMENT.md  README.md  pyproject.toml  pyrightconfig.json
src/ecs-mcp-server/awslabs/: __init__.py
src/ecs-mcp-server/tests/: conftest.py
src/finch-mcp-server/: .gitignore  CHANGELOG.md  NOTICE  README.md  pyproject.toml
src/finch-mcp-server/awslabs/: __init__.py
src/finch-mcp-server/tests/: __init__.py  test_server.py  test_utils_ecr.py  (+4 more)
src/git-repo-research-mcp-server/: NOTICE  README.md  pyproject.toml  run_tests.sh
src/mcp-lambda-handler/: .gitignore  NOTICE  README.md  pyproject.toml
src/nova-canvas-mcp-server/: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  NOTICE  README.md  pyproject.toml  run_tests.sh  smithery.yaml
src/syntheticdata-mcp-server/: NOTICE  README.md  pyproject.toml
src/terraform-mcp-server/: Dockerfile  README.md  pyproject.toml  run_tests.sh
(+831 files in other folders)
